desktop design finished

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
 .background svg {
   position: absolute;
   right: 0;
+  margin: 10px;
 }
 
 .background .content .title h1 {
@@ -31,7 +32,7 @@ body {
   font-family: "Catamaran", sans-serif;
   text-transform: uppercase;
   padding-top: 30px;
-  font-size: 65px;
+  font-size: 60px;
   letter-spacing: 10px;
   font-weight: 100;
 }
@@ -45,6 +46,15 @@ body {
           justify-content: space-evenly;
   width: 90%;
   margin: 100px auto 0;
+}
+
+@media (max-width: 700px) {
+  .background .content .content-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .background .content .science-container,
@@ -106,5 +116,33 @@ body {
 
 .background .content .nature-container {
   background-color: #e8e9e6;
+}
+
+.background .content .video-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.background .content .video-container svg {
+  width: 140px;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  margin-top: 70px;
+}
+
+.background .under {
+  color: #dfa34e;
+  font-weight: 700;
 }
 /*# sourceMappingURL=style.css.map */
